--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <!-- the body of your page goes here -->
     <div class="container text-center py-4">
         <div class="rounded-circle overflow-hidden">
-            <img class="responsive" src="./images/elmo.jpg" alt="">
+            <img class="responsive" src="./images/hikelogo.png" alt="">
         </div>
         <h1>Welcome to The Hike App</h1>
         <a href="login.html" class="btn btn-warning" role="button">Log in</a>
